--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("TDhohmTdl96wHG3dN"); // your EmailJS public key
+      emailjs.init("UmOV61BVeaWo2zAub"); // your EmailJS public key
     })();
   </script>
 </head>
@@ -63,4 +63,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
